--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <div class="container">
         <h1>Ivan Jablonka - Un garçon comme vous et moi </h1>
         <h1>L'oeuvre et son univers</h1>
+        <div class="content">
+            <h1><a href=#chapitre1>1</a> 2 3 4 ...</h1>
+        </div>
         <div class="timeline">
             <ul>
                 <li>
-                    <div class="content">
+                    <div id="chapitre1" class="content">
                         <h3>Chapitre 1: "Je ne suis pas un mâle" </h3>
                         <p><b>Temporalité du chapitre:</b> temps présent.</p>
                         <p><b>Références:</b><br> Camus (Albert), <i>Premier Homme</i>, Paris, Gallimard, 1994.<br>
@@ -33,7 +36,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre2" class="content">
                         <h3>Chapitre 2: Accouchement sans douleur </h3>
                         <p><b>Temporalité du chapitre:</b> Naissance de l'auteur</p>
                         <p><b>Références:</b><br> Douglass (Frederick), <i>Vie d'un esclave américain</i>, Paris, Nouveau Monde, 2018.<br>
@@ -50,7 +53,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre3"class="content">
                         <h3>Chapitre 3: Le journal d'enfance</h3>
                         <p><b>Temporalité du chapitre:</b> Naissance - Petite enfance</p>
                         <p><b>Références:</b><br> 
@@ -69,7 +72,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre4" class="content">
                         <h3>Chapitre 4: Aux origines de l'angoisse</h3>
                         <p><b>Temporalité du chapitre: </b>Petite enfance</p>
                         <p><b>Références:</b><br> 
