--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Ivan Jablonka - Un garçon comme vous et moi </h1>
         <h1>L'oeuvre et son univers</h1>
         <div class="content">
-            <h1><a href=#chapitre1>1</a> 2 3 4 ...</h1>
+            <h1><a href=#chapitre1>1</a> <a href=#chapitre2>2</a> <a href=#chapitre3>3</a> <a href=#chapitre4>4</a> ... </h1>
         </div>
         <div class="timeline">
             <ul>
