--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Jablonka - Un garçon comme vous et moi</title>
 </head>
 <body>
-    <div class="container">
+    <div id="haut" class="container">
         <h1>Ivan Jablonka - Un garçon comme vous et moi </h1>
         <h1>L'oeuvre et son univers</h1>
         <div class="content">
@@ -422,6 +422,9 @@
                 </li>
             </ul>
         </div>
+        <div class="content">
+                <h1><a href="#haut">Haut de page.</a></h1>
+            </div>
     </div>
 </body>
 </html>
