ajout ID pour ancres

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="haut" class="container">
         <h1>Ivan Jablonka - Un garçon comme vous et moi </h1>
-        <h1>L'oeuvre et son univers</h1>
+        <h2>L'oeuvre et son univers</h2>
         <div class="content">
             <h2><a href=#chapitre1>1</a> <a href=#chapitre2>2</a> <a href=#chapitre3>3</a> <a href=#chapitre4>4</a> ... </h2>
         </div>
@@ -87,7 +87,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre5" class="content">
                         <h3>Chapitre 5: Cul nu à la Bédoule</h3>
                         <p><b>Temporalité du chapitre:</b> Fin des années 80</p>
                         <p><b>Références:</b><br> 
@@ -106,7 +106,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre6" class="content">
                         <h3>Chapitre 6: l'éducation bienveillante</h3>
                         <p><b>Temporalité du chapitre:</b> 1979-1980</p>
                         <p><b>Références:</b><br> 
@@ -121,7 +121,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre7" class="content">
                         <h3>Chapitre 7: À la déli-délo</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -131,7 +131,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre8" class="content">
                         <h3>Chapitre 8 Les maîtresses-mamans: </h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -141,7 +141,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre9" class="content">
                         <h3>Chapitre 9: Délivrer Chloé</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -151,7 +151,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre10" class="content">
                         <h3>Chapitre 10: Goldorak ou la vulnérabilité des garçons</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -161,7 +161,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre11" class="content">
                         <h3>Chapitre 11: "Un peu d'astuce, d'espièglerie"</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -171,7 +171,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre12" class="content">
                         <h3>Chapitre 12: Vive la vive!</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -181,7 +181,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre13" class="content">
                         <h3>Chapitre 13: Petites violences</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -191,7 +191,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre14" class="content">
                         <h3>Chapitre 14: Joysticks et ballons</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -201,7 +201,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre15" class="content">
                         <h3>Chapitre 15: Le grand lycée parisien</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -211,7 +211,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre16" class="content">
                         <h3>Chapitre 16: Naissance du bon élève</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -221,7 +221,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre17" class="content">
                         <h3>Chapitre 17: Lettre ouverte aux mufles</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -231,7 +231,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre18" class="content">
                         <h3>Chapitre 18: La garçonnité à succès</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -241,7 +241,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre19" class="content">
                         <h3>Chapitre 19: Les soirées de Clamart</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -251,7 +251,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre20" class="content">
                         <h3>Chapitre 20: Histoire de Partrick</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -261,7 +261,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre21" class="content">
                         <h3>Chapitre 21: La masculinité de contrôle</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -271,7 +271,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre22" class="content">
                         <h3>Chapitre 22: Porno sans scénario</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -281,7 +281,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre23" class="content">
                         <h3>Chapitre 23: Mot à mot, coeur à coeur</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -291,7 +291,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre24" class="content">
                         <h3>Chapitre 24: Des alexandrins comme de la musculation</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -301,7 +301,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre25" class="content">
                         <h3>Chapitre 25: J'écris pour les filles de la cour de récré</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -311,7 +311,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre26" class="content">
                         <h3>Chapitre 26: La révolte Renaud, la morale Goldman</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -321,7 +321,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre27" class="content">
                         <h3>Chapitre 27: Victoire du pitre</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -331,7 +331,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre28" class="content">
                         <h3>Chapitre 28: En uniforme</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -341,7 +341,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre29" class="content">
                         <h3>Chapitre 29: Histoire de Benoît</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -351,7 +351,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre30" class="content">
                         <h3>Chapitre 30: L'argent et les muscles</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -361,7 +361,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre31" class="content">
                         <h3>Chapitre 31: Désobéissance de genre</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -371,7 +371,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre32" class="content">
                         <h3>Chapitre 32: Les clématites</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -381,7 +381,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre33" class="content">
                         <h3>Chapitre 33: Un déjeuner avec Yann</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -391,7 +391,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre34" class="content">
                         <h3>Chapitre 34: L'âge d'homme</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -401,7 +401,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre35" class="content">
                         <h3>Chapitre 35: La "petite en violet"</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
@@ -411,7 +411,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class="content">
+                    <div id="chapitre36" class="content">
                         <h3>Chapitre 36: Être avec elle</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                     </div>
