--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Ivan Jablonka - Un garçon comme vous et moi </h1>
         <h2>L'oeuvre et son univers</h2>
         <div class="content">
-            <h2><a href=#chapitre1>1</a> <a href=#chapitre2>2</a> <a href=#chapitre3>3</a> <a href=#chapitre4>4</a> <a href=#chapitre5>5</a> <a href=#chapitre6>6</a> <a href=#chapitre7>7</a> <a href=#chapitre8>8</a> <a href=#chapitre9>9</a> <a href=#chapitre10>10</a> <a href=#chapitre11>11</a> <a href=#chapitre12>12</a> <a href=#chapitre13>13</a> <a href=#chapitre14>14</a> <a href=#chapitre15>15</a> <a href=#chapitre16>16</a> <a href=#chapitre17>17</a> <a href=#chapitre18>18</a></h2>
+            <h2><a href=#chapitre1>1</a> <a href=#chapitre2>2</a> <a href=#chapitre3>3</a> <a href=#chapitre4>4</a> <a href=#chapitre5>5</a> <a href=#chapitre6>6</a> <a href=#chapitre7>7</a> <a href=#chapitre8>8</a> <a href=#chapitre9>9</a> <a href=#chapitre10>10</a> <a href=#chapitre11>11</a> <a href=#chapitre12>12</a> <a href=#chapitre13>13</a> <a href=#chapitre14>14</a> <a href=#chapitre15>15</a> <a href=#chapitre16>16</a> <a href=#chapitre17>17</a> <a href=#chapitre18>18</a> <a href=#chapitre19>19</a> <a href=#chapitre20>20</a> <a href=#chapitre21>21</a> <a href=#chapitre22>22</a> <a href=#chapitre23>23</a> <a href=#chapitre24>24</a> <a href=#chapitre25>25</a> <a href=#chapitre26>26</a> <a href=#chapitre27>27</a> <a href=#chapitre28>28</a> <a href=#chapitre29>29</a> <a href=#chapitre30>30</a> <a href=#chapitre31>31</a> <a href=#chapitre32>32</a> <a href=#chapitre33>33</a> <a href=#chapitre34>34</a> <a href=#chapitre35>35</a> <a href=#chapitre36>36</a></h2>
         </div>
         <div class="timeline">
             <ul>
