--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
                             Schmitt (Jean-Claude), <i>L'invention de l'anniversaire</i>, Paris, Arkhê, 2009.<br>
                         </p>
                         <p><b>Documents: </b><br> À la maternité (photos dans le journal d'enfance de l'auteur, octobre 1973)</p>
-                    <!-- insertion image, vérifier pourquoi cela ne fonctionne pas
-                        <p><img src="Image1.jpeg" alt="Photo à la maternité" width="100px" height="50px" /></p>  -->
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>insérer image livre</h4>
+                        <img class="left" src="image.ch2.png" width="250" height="175" alt="Image" title="" />
                     </div>
                 </li>
                 <li>
