--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <img class="left" src="image.ch2.png" width="250" height="175" alt="Image" title="" />
+                        <img class="left" src="image.ch2.png" width="250" height="175" alt="Image" title="" align="center"/>
                     </div>
                 </li>
                 <li>
