--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
                         <p><b>Documents: </b><br> À la maternité (photos dans le journal d'enfance de l'auteur, octobre 1973)</p>
                     </div>
                     <div class="point"></div>
+                    
+                    <div class="content">
+                        <p><b>Documents: </b><br> À la maternité (photos dans le journal d'enfance de l'auteur, octobre 1973)</p>
+                    </div>
+                    
                     <div class="date">
-                        <img class="left" src="image.ch2.png" width="250" height="175" alt="Image" title="" align="center"/>
+                        <img class="left" src="image.ch2.png" width="250" height="175" alt="Image" title="" align="right"/>
                     </div>
                 </li>
                 <li>
