--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             Meizoz (Jérôme), <i>Faire le garçon</i>, Genève, Zoé, 2017.<br>
                             Way (Niobe), Chu (Judy), sous la direction de, <i> Adolescent Boys. Exploring Diverse Cultures of Boyhood</i>, New York, NYU Press, 2004.<br>
                         </p>
-                        <p><b>Documents: </b> aucun.</p>
+                        <p><b>Documents: </b> Aucun.</p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
@@ -99,7 +99,7 @@
                             Rouhet (Georges), <i>Revenons à la nature et régénérons-nous</i>, Paris, Berger-Levrault, 1913. <br>
                             Sylvère (Antoine), <i>Toinou. Le cri d'un enfant auvergnat</i>, Paris, Plon, 1980. 
                         </p>
-                        <p><b>Documents: </b><br> Aucun.
+                        <p><b>Documents: </b> Aucun.
                         </p>
                     </div>
                     <div class="point"></div>
