--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>insérer image livre + tableaux</h4>
+                        <img class="left" src="image.ch3.jpg" width="200" height="200" alt="Image" title="" align="left"/>
                     </div>
                 </li>
                 <li>
@@ -125,11 +125,15 @@
                 <li>
                     <div id="chapitre7" class="content">
                         <h3>Chapitre 7: À la déli-délo</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Début des années 80 </p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Cuban (Larry), <i>How Teachers Taught: Constancy and Change in American Classrooms, 1890-1980</i>, New York, Teachers College Press, 1993. <br>
+                            Luc (Jean-Noël), <i>L'Invention du jeune enfant au XIXe siècle. De la salle d'asile à l'école maternelle</i>, Paris, Belin, 1997. <br>
+                            Prost (Antoine), <i>Du changement dans l'école. Les réformes de l'éducation de 1936 à nos jours</i>, Paris, Seuil, 2013. <br>
+                            Tyack (David), Tobin (William), "The "Grammar" of Schooling: Why HAs it Been so Hard to Change?", <i>American Educational Research Journal</i>, vol.31, n°3, 1994, p.453-479. <br>
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents:</b> <br>   
+                            Image d'un morceau de musique.
                         </p>
                     </div>
                     <div class="point"></div>
@@ -142,7 +146,10 @@
                         <h3>Chapitre 8 Les maîtresses-mamans: </h3>
                         <p><b>Temporalité du chapitre:</b> </p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Cuban (Larry), <i>How Teachers Taught: Constancy and Change in American Classrooms, 1890-1980</i>, New York, Teachers College Press, 1993. <br>
+                            Luc (Jean-Noël), <i>L'Invention du jeune enfant au XIXe siècle. De la salle d'asile à l'école maternelle</i>, Paris, Belin, 1997. <br>
+                            Prost (Antoine), <i>Du changement dans l'école. Les réformes de l'éducation de 1936 à nos jours</i>, Paris, Seuil, 2013. <br>
+                            Tyack (David), Tobin (William), "The "Grammar" of Schooling: Why HAs it Been so Hard to Change?", <i>American Educational Research Journal</i>, vol.31, n°3, 1994, p.453-479. <br>
                         </p>
                         <p><b>Documents: </b>
                         </p>
