--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
@@ -104,7 +103,6 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
@@ -119,7 +117,7 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>insérer image livre</h4>
+                        <img class="left" src="Image.ch6.jpg" width="250" height="175" alt="Image" title="" align="right"/>
                     </div>
                 </li>
                 <li>
