ajout image ch7

--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>insérer image livre</h4>
+                        <img class="left" src="Image.ch7.jpg" width="250" height="66" alt="Image" title="" align="left"/>
                     </div>
                 </li>
                 <li>
                     <div id="chapitre8" class="content">
-                        <h3>Chapitre 8 Les maîtresses-mamans: </h3>
+                        <h3>Chapitre 8: Les maîtresses-mamans </h3>
                         <p><b>Temporalité du chapitre:</b> </p>
                         <p><b>Références:</b><br> 
                             Cuban (Larry), <i>How Teachers Taught: Constancy and Change in American Classrooms, 1890-1980</i>, New York, Teachers College Press, 1993. <br>
@@ -149,7 +149,8 @@
                             Prost (Antoine), <i>Du changement dans l'école. Les réformes de l'éducation de 1936 à nos jours</i>, Paris, Seuil, 2013. <br>
                             Tyack (David), Tobin (William), "The "Grammar" of Schooling: Why HAs it Been so Hard to Change?", <i>American Educational Research Journal</i>, vol.31, n°3, 1994, p.453-479. <br>
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b> <br>
+                            Images de salle de classe.
                         </p>
                     </div>
                     <div class="point"></div>
