--- a/index.html
+++ b/index.html
@@ -155,8 +155,11 @@
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>insérer image livre</h4>
+                        <img class="left" src="Image.ch8-1.jpg" width="250" height="66" alt="Image" title="" align="right"/> <br>
+                        <h4></h4>
+                        <img class="left" src="Image.ch8-2.jpg" width="250" height="66" alt="Image" title="" align="right"/>
                     </div>
+
                 </li>
                 <li>
                     <div id="chapitre9" class="content">
