--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <li>
                     <div id="chapitre8" class="content">
                         <h3>Chapitre 8: Les maîtresses-mamans </h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> 1983-1984</p>
                         <p><b>Références:</b><br> 
                             Cuban (Larry), <i>How Teachers Taught: Constancy and Change in American Classrooms, 1890-1980</i>, New York, Teachers College Press, 1993. <br>
                             Luc (Jean-Noël), <i>L'Invention du jeune enfant au XIXe siècle. De la salle d'asile à l'école maternelle</i>, Paris, Belin, 1997. <br>
@@ -164,16 +164,15 @@
                 <li>
                     <div id="chapitre9" class="content">
                         <h3>Chapitre 9: Délivrer Chloé</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Début des années 80</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Roland (Charlotte), <i>Du ghetto à l'Occident. Deux générations yiddishes en France</i>, Paris, Minuit, 1962. <br>
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b> Aucun.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
@@ -181,14 +180,21 @@
                         <h3>Chapitre 10: Goldorak ou la vulnérabilité des garçons</h3>
                         <p><b>Temporalité du chapitre:</b> </p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Carletti (sébastien), <i>Nos années récré A2, 1978-1988</i>, Paris, Flammarion, 2013. <br>
+                            Cremin (Lawrence), "The Family as Educator: Some Comments on the Recent Historiography", <i>Teachers College Record</i>, vol. 76, n°2, 1974, p.250-265. <br>
+                            Diter (Kevin), ""Je l'aime, un peu, beaucoup, à la folie ... pas du tout!" La socialisation des garçons aux sentiments amoureux", <i>Terrains & travaux</i>, 2015/2, p.21-40. <br>
+                            Gomarasca (Alessandro), sous la direction de, <i>Poupées, robots. La culture pop japonaise</i>, Paris, Autrement, 2002. <br>
+                            Hatchuel (Sarah), Pruvost-Delaspre (Marie), sous la direction de, <i>Goldorak. L'aventure continue</i>, Tours, Presses universitaires François-Rabelais, 2018. <br>
+                            Lurçat (Liliana), <i>À cinq ans, seul avec Goldorak. Le jeune enfant et la télévision</i>, Paris, Syros, 1981. <br>
+                            Pasquier (Dominique), <i>La Culture des sentiments. L'expérience télévisuelle des adolescents</i>, Paris, MSH, 1999.
                         </p>
                         <p><b>Documents: </b>
+                            Photos de francs français de l'époque.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>insérer image livre</h4>
+                        <img class="left" src="Image.ch7.jpg" width="250" height="66" alt="Image" title="" align="right"/>
                     </div>
                 </li>
                 <li>
