Ajout images ch12

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <li>
                     <div id="chapitre10" class="content">
                         <h3>Chapitre 10: Goldorak ou la vulnérabilité des garçons</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Courant des années 80</p>
                         <p><b>Références:</b><br> 
                             Carletti (sébastien), <i>Nos années récré A2, 1978-1988</i>, Paris, Flammarion, 2013. <br>
                             Cremin (Lawrence), "The Family as Educator: Some Comments on the Recent Historiography", <i>Teachers College Record</i>, vol. 76, n°2, 1974, p.250-265. <br>
@@ -200,31 +200,43 @@
                 <li>
                     <div id="chapitre11" class="content">
                         <h3>Chapitre 11: "Un peu d'astuce, d'espièglerie"</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Temps présent, souvenirs.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Carletti (sébastien), <i>Nos années récré A2, 1978-1988</i>, Paris, Flammarion, 2013. <br>
+                            Cremin (Lawrence), "The Family as Educator: Some Comments on the Recent Historiography", <i>Teachers College Record</i>, vol. 76, n°2, 1974, p.250-265. <br>
+                            Diter (Kevin), ""Je l'aime, un peu, beaucoup, à la folie ... pas du tout!" La socialisation des garçons aux sentiments amoureux", <i>Terrains & travaux</i>, 2015/2, p.21-40. <br>
+                            Gomarasca (Alessandro), sous la direction de, <i>Poupées, robots. La culture pop japonaise</i>, Paris, Autrement, 2002. <br>
+                            Hatchuel (Sarah), Pruvost-Delaspre (Marie), sous la direction de, <i>Goldorak. L'aventure continue</i>, Tours, Presses universitaires François-Rabelais, 2018. <br>
+                            Lurçat (Liliana), <i>À cinq ans, seul avec Goldorak. Le jeune enfant et la télévision</i>, Paris, Syros, 1981. <br>
+                            Pasquier (Dominique), <i>La Culture des sentiments. L'expérience télévisuelle des adolescents</i>, Paris, MSH, 1999.
                         </p>
-                        <p><b>Documents: </b>
+                        <p><b>Documents: </b> Aucun.
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>-</h4>
                     </div>
                 </li>
                 <li>
                     <div id="chapitre12" class="content">
                         <h3>Chapitre 12: Vive la vive!</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Temps présent, divers souvenirs.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Ariès (Philippe), <i>L'Enfant et la vie familiale sous l'Ancien Régime</i>, Paris, Plon, 1960.<br>
+                            Huet (Maryse), "La progression de l'activité féminine est-elle réversible?", <i>Economie et statistique</i>, n°145, juin 1982, p.3-17. <br>
+                            Jablonka (Ivan), "L'enfance ou le "voyage vers la virilité"", <i>in</i> Corbin (Alain), Courtine (Jean-Jaques), Vigarello (Georges), sous la direction de, <i>Histoire de la virilité</i>, T.2, <i>Le Triomphe de la virilité: le XIXe siècle</i>, Paris, Seuil, 2011, p.33-61. <br>
+                            Sohn (Anne-Marie), <i>Sois un homme! La construction de la masculinité au XIXe siècle</i>, Paris, Seuil, 2009.
                         </p>
                         <p><b>Documents: </b>
+                            Photo de billes.
+                            Dessin d'un poisson. 
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>insérer image livre</h4>
+                        <img class="left" src="Image.ch12-1.jpg" width="200" height="300" alt="Image" title="" align="right"/>
+                        <h4></h4>
+                        <img class="left" src="Image.ch12-2.jpg" width="250" height="90" alt="Image" title="" align="right"/
                     </div>
                 </li>
                 <li>
