ajout image ch 13

--- a/index.html
+++ b/index.html
@@ -242,16 +242,18 @@
                 <li>
                     <div id="chapitre13" class="content">
                         <h3>Chapitre 13: Petites violences</h3>
-                        <p><b>Temporalité du chapitre:</b> </p>
+                        <p><b>Temporalité du chapitre:</b> Temps présent.</p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Brown (Donald), <i>Human Universals</i>, Philadelphie, Temple University Press, 1991. <br>
+                            Jarvis (Pam), ""Rough and Tumble" Play: Lessons in Life", <i>Evolutionary Psychology</i>, vol. 4, n°1, janvier 2006.
                         </p>
                         <p><b>Documents: </b>
+                            Image de figurines en plastique. 
                         </p>
                     </div>
                     <div class="point"></div>
                     <div class="date">
-                        <h4>insérer image livre</h4>
+                        <img class="left" src="Image.ch13.jpg" width="250" height="180" alt="Image" title="" align="left"/
                     </div>
                 </li>
                 <li>
