--- a/index.html
+++ b/index.html
@@ -261,7 +261,10 @@
                         <h3>Chapitre 14: Joysticks et ballons</h3>
                         <p><b>Temporalité du chapitre:</b> </p>
                         <p><b>Références:</b><br> 
-                            Dewey (John), <i>Démocratie et Education</i>, Malakoff Armand Colin, 2018 (1916). <br>
+                            Gastaut (Yvan), Mourlane (Stéphane), sous la direction de, <i>Le Football dans nos sociétés. Une culture populaire, 1914-1998</i>, Paris, Autrement, 2006. <br>
+                            Gentil (Philippe), "L'expérience de la mort virtuelle. Les jeux vidéos ou la fausse mort", <i>Etudes sur la mort</i>, n° 139, 2011/1, p.79-91. <br>
+                            Messner (Michael), "Boyhood, Organized Sports and the Construction of Masculinities", <i>Journal of Contemporary Ethnography</i>, vol. 18, n°4, 1990, p.416-444. <br>
+                            Ter Minassian (Hovig), "<i>Space invaders</i>: les pratiques des jeux vidéos dans les espaces domestiques", <i>Annales de géographie</i>, n°707, 2016/1, p.51-73. <br>
                         </p>
                         <p><b>Documents: </b>
                         </p>
